--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       s.parentNode.insertBefore(hm, s);
     })();
   </script>
+  <script src="https://cdn.ckeditor.com/ckeditor5/22.0.0/classic/ckeditor.js"></script>
 </head>
 
 <body>
